# Orchestration_system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: __init__.py  factory.py  registry.py  schemas.py  validators.py
app/api/: approvals.py  auth.py  deps.py  documents.py  health.py  projects.py  requirements.py
app/capabilities/: gap_analyzer.py  matcher.py  registry.py  schemas.py
app/consultation/: __init__.py  masking.py  package.py  service.py
app/core/: auth.py  bootstrap.py  clock.py  config.py  enums.py  exceptions.py  security.py
app/db/: base.py  session.py
app/expansion/: __init__.py  planner.py  service.py
app/mcp/: __init__.py  allowlist.py  connection.py  health.py  registry.py  schemas.py
app/observability/: logging.py
app/orchestrator/: audit.py  checkpoints.py  development_state_machine.py  product_state_machine.py  state_machine.py  timeout_checker.py  transition_guard.py  transitions.py
app/policy/: __init__.py  engine.py  schemas.py
app/product/: backlog_generator.py  classifier.py  core_agent.py  question_generator.py  requirement_agent.py  schemas.py  specification_agent.py  workflow.py
app/project_memory/: conflict_detector.py  decision_log.py  feedback_store.py  requirement_store.py  service.py  (+1 more)
configs/: auto-block-policy.yaml  capabilities.yaml  expansion-catalog.yaml  mcp-allowlist.yaml  mcp-servers.yaml  state-timeouts.yaml
migrations/: env.py
tests/: conftest.py
(+68 files in other folders)
